# SIC-Assembler

./: CMakeLists.txt  Expression.cpp  Format.cpp  LineOfCode.cpp  ListingFile.cpp  Literal.cpp  ObjectFile.cpp  Opcode_SIC.cpp  PassOne.cpp  README.md  main.cpp
Include/: Expression.h  Format.h  LineOfCode.h  ListingFile.h  Literal.h  ObjectFile.h  Opcode_SIC.h  PassOne.h
